refactor(mappings): fix